<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Camera Demo</string>
	<string name="standard">Standard</string>
	<string name="ffc">Front-Facing</string>
	<string name="record">Record Video</string>
	<string name="stop">Stop</string>
	<string name="lock_to_landscape">Lock to Landscape</string>
	<string name="launch_camera_app">Launch Camera App</string>
	<string name="take_picture">Take Picture</string>
	<string name="auto_focus">Auto-focus</string>
	<string name="single_shot_mode">Single-Shot Mode</string>
	<string name="no_image">There was no image to show!</string>
	<string name="show_zoom">Show Zoom</string>
	<string name="flash">Flash</string>
	<string name="launch_full_screen">Launch Full-Screen</string>
	<string name="mirror_ffc">Mirror FFC</string>
    <string name="camera_cannot_open">Camera Not Open</string>
	
</resources>
